--- a/apps/dashboard/web/src/apps/dashboard/views/testing/components/react/start-node.css
+++ b/apps/dashboard/web/src/apps/dashboard/views/testing/components/react/start-node.css
@@ -42,6 +42,11 @@
     padding-top: 8px !important;
 }
 
+.MuiButton-root {
+    background-color: #6200EA !important;
+    margin: 0 12px 12px 0 !important;
+}
+
 .variable-name {
     position: absolute;
     top: -8px;
@@ -98,4 +103,18 @@
   
 .MuiPaper-root {
     color: #47466A !important
+}
+
+.request-editor {
+    font-size: 12px;
+    font-family: monospace;
+    color: #47466A;
+}
+
+.request-title {
+    padding-top: 12px;
+    font-size: 13px;
+    color: #47466A;
+    font-family: 'Poppins';
+    font-weight: 500;
 }
