initial validator working

--- a/apps/dashboard/web/src/apps/dashboard/views/testing/components/react/start-node.css
+++ b/apps/dashboard/web/src/apps/dashboard/views/testing/components/react/start-node.css
@@ -201,6 +201,10 @@
     word-break: break-all;
 }
 
+.result-node-vulnerable {
+    color: red
+}
+
 .results-node-selected {
     font-weight: bold;
 }
