--- a/apps/dashboard/web/src/apps/dashboard/views/testing/components/react/start-node.css
+++ b/apps/dashboard/web/src/apps/dashboard/views/testing/components/react/start-node.css
@@ -10,7 +10,7 @@
 }
 
 .start-node:hover {
-    box-shadow: 0px 0px 3px 3px #47466a3d;
+    box-shadow: 0px 0px 3px 3px var(--themeColorDark3);
 }
 
 .red-boundary {
@@ -26,7 +26,7 @@
 }
 
 .green-boundary:hover {
-    box-shadow: 0px 0px 3px 3px #6200EA3d !important;
+    box-shadow: 0px 0px 3px 3px var(--themeColor11) !important;
 }
 
 .MuiInput-input {
@@ -74,27 +74,27 @@
 }
 
 .GET {
-    color: #61affe !important;
+    color: var(--hexColor14) !important;
 }
 
 .POST {
-    color: #49cc90 !important;
+    color: var(--hexColor11) !important;
 }
 
 .PUT {
-    color: #fca130 !important;
+    color: var(--hexColor36) !important;
 }
 
 .DELETE {
-    color: #f93e3e !important;
+    color: var(--hexColor37) !important;
 }
 
 .PATCH {
-    color: #50e3c2 !important;
+    color: var(--hexColor13) !important;
 }
 
 .HEAD {
-    color: #9012fe !important;
+    color: var(--hexColor18) !important;
 }
 
 .OPTIONS {
@@ -102,27 +102,27 @@
 }
 
 [method="GET"] {
-    color: #61affe !important;
+    color: var(--hexColor14) !important;
 }
 
 [method="POST"] {
-    color: #49cc90 !important;
+    color: var(--hexColor11) !important;
 }
 
 [method="PUT"] {
-    color: #fca130 !important;
+    color: var(--hexColor36) !important;
 }
 
 [method="DELETE"] {
-    color: #f93e3e !important;
+    color: var(--hexColor37) !important;
 }
 
 [method="PATCH"] {
-    color: #50e3c2 !important;
+    color: var(--hexColor13) !important;
 }
 
 [method="HEAD"] {
-    color: #9012fe !important;
+    color: var(--hexColor18) !important;
 }
 
 [method="OPTIONS"] {
@@ -136,7 +136,7 @@
   
 .react-flow__edge-path:hover {
     stroke-width: 2px;
-    filter: drop-shadow(3px 5px 2px #47466A3d);
+    filter: drop-shadow(3px 5px 2px var(--themeColorDark3));
     cursor: pointer;
 }
 
