--- a/apps/dashboard/web/src/apps/dashboard/pages/settings/settings.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/settings/settings.css
@@ -4,12 +4,12 @@
 .Polaris-ResourceItem__Actions {
     display: flex !important;
 }
-.Polaris-Modal-Dialog__Modal.Polaris-Modal-Dialog--fullScreen {
+/* .Polaris-Modal-Dialog__Modal.Polaris-Modal-Dialog--fullScreen {
     margin-top: 10vh;
     max-width: 100% !important;
     height: 100vh !important;
     max-height: 100vh !important;
 }
 .Polaris-Modal-Dialog__Container {
-    z-index: 1000 !important;
-}
+    z-index: --p-z-5 !important;
+} */
