basic test run result screen complete

--- a/apps/dashboard/web/src/apps/dashboard/components/tables/rows/row.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/tables/rows/row.css
@@ -1,4 +1,7 @@
-/* This overriding works on the code sandbox. */
-a:hover{
+.linkClass > .Polaris-Link--removeUnderline:hover {
     text-decoration: none !important;
+}
+
+.linkClass > .Polaris-Link:focus:not(:active){
+    outline: none !important;
 }
