--- a/apps/dashboard/web/src/apps/dashboard/pages/settings/settings.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/settings/settings.css
@@ -4,3 +4,15 @@
 .Polaris-ResourceItem__Actions {
     display: flex !important;
 }
+.Polaris-LegacyCard__Section:first-child > .Polaris-LegacyCard__Header {
+    padding: 0 !important;
+}
+
+.Polaris-LegacyCard__Header > .Polaris-LegacyStack--alignmentBaseline {
+    align-items: center;
+}
+
+.Polaris-LegacyCard__Section > .Polaris-Box {
+    padding-bottom: 12px !important;
+    padding-top: 12px !important;
+}
