Data from backend done, api calls for updating left

--- a/apps/dashboard/web/src/apps/dashboard/pages/observe/data_types/DataTypes.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/observe/data_types/DataTypes.css
@@ -1,3 +1,4 @@
 .control-frame-padding > .Polaris-Frame > .Polaris-Frame__Main {
     padding: 0 !important;
+    padding-bottom: 30px !important;
 }
