--- a/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
@@ -1,3 +1,5 @@
 .highlight{
-    background-color:#E9BDAB;
+    background-color:#FFE9E8;
+    color: #D72B0C !important;
+    font-weight: 600 !important;
 }
