add color for other types

--- a/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
@@ -3,3 +3,9 @@
     color: #D72B0C !important;
     font-weight: 600 !important;
 }
+
+.highlightOther{
+    background-color:#FFE9E8;
+    color: #d77f0c !important;
+    font-weight: 600 !important;
+}
