--- a/apps/dashboard/web/src/apps/dashboard/components/tables/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/tables/style.css
@@ -4,3 +4,16 @@
 .Polaris-Filters-FilterPill__PopoverWrapper {
     max-width: 50rem !important;
 }
+
+.hideTableHead .Polaris-LegacyCard__Section:first-child {
+    border-top-left-radius: 0;
+    border-top-right-radius:0;
+}
+
+.hideTableHead .Polaris-Filters__FiltersWrapper {
+    border-bottom:0
+}
+
+.removeHeaderColor .Polaris-IndexTable__TableHeading {
+    background:none;
+}
