Results workflow created

--- a/apps/dashboard/web/src/apps/dashboard/pages/test_editor/TestEditor.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/test_editor/TestEditor.css
@@ -41,3 +41,11 @@
 .editor-navbar .Polaris-Navigation__Icon{
     margin-right: 2px !important;
 }
+
+.show-results{
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    background: #fafbfb;
+    height: 5vh;
+}
