--- a/apps/dashboard/web/src/apps/dashboard/pages/quick_start/QuickStart.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/quick_start/QuickStart.css
@@ -50,3 +50,17 @@
     display: flex;
     align-items: center;
 }
+
+.card-items .Polaris-Box{
+    position: unset !important;
+    width: unset !important;
+}
+
+.copyRequest {
+    display: flex;
+    margin: 0 8px 0 16px;
+    justify-content: space-between;
+    border: 1px solid #dde0e4;
+    padding: 4px;
+    border-radius: 4px;
+}
