added fargate to best of my knowledge

--- a/apps/dashboard/web/src/apps/dashboard/pages/quick_start/QuickStart.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/quick_start/QuickStart.css
@@ -24,9 +24,9 @@
     padding: 8px !important;
 }
 .right-card .Polaris-Box {
-    position: fixed;
+    position: absolute;
     right: 0;
-    top: 57px;
+    top: 1px;
     width: 27vw;
 }
 .settings {
