add diff in sample data and change test editor result screen

--- a/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
@@ -13,3 +13,8 @@
 .Polaris-DropZone{
     min-height: 0 !important;
 }
+
+.editor > .monaco-editor {
+    --vscode-diffEditor-insertedTextBackground:"";
+    --vscode-diffEditor-removedTextBackground:"";
+}
