--- a/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
@@ -13,3 +13,13 @@
 .Polaris-DropZone{
     min-height: 0 !important;
 }
+
+.stepper-box {
+    height: 6px;
+    border-radius: 4px;
+    background: #dadae1;
+}
+
+.active {
+    background: #47466a !important;
+}
