--- a/apps/dashboard/web/src/apps/dashboard/pages/onboarding/Onboarding.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/onboarding/Onboarding.css
@@ -10,7 +10,7 @@
 .main-card-onboarding {
     margin: auto;
     width: 45vw;
-    margin-top: 5vw;
+    margin-top: 4.5vw;
     display: flex;
     flex-direction: column;
     gap: 2vw;
@@ -25,4 +25,14 @@
 }
 .Polaris-Text--subdued {
     color: #47466a !important;
+}
+
+.suite-card{
+    /* border: 1px solid #dde0e4; */
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.active-card {
+    border: 2.5px solid #47466a !important;
 }
