--- a/apps/dashboard/web/src/apps/dashboard/pages/test_editor/TestEditor.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/test_editor/TestEditor.css
@@ -1,37 +1,33 @@
 .editor-navbar .Polaris-Navigation__PrimaryNavigation{
     flex: none !important;
-    gap: 20px !important;
+}
+
+.editor-navbar .Polaris-HorizontalStack{
+    flex-wrap: unset !important;
+}
+.editor-navbar .Polaris-Navigation__ItemInnerWrapper{
+    border-top: unset !important;
 }
 
 .editor-navbar .Polaris-Navigation{
     max-width: 18rem !important;
+    background: white !important;
+}
+
+.editor-navbar .Polaris-Navigation__Section{
+    padding: 0 !important;
+}
+
+.editor-navbar .Polaris-Button__Content, .editor-navbar .Polaris-Button__Text.Polaris-Button--removeUnderline{
+    width: inherit;
+}
+
+.editor-navbar .Polaris-Button__Content{
+    padding-right: 1vw;
 }
 
 .editor-navbar .Polaris-Connected{
     padding: 0 12px !important;
-}
-
-.text-overflow {
-    overflow: hidden !important;
-    white-space: nowrap !important;
-    text-overflow: ellipsis !important;
-    display: flex !important;
-    max-width: 200px;
-}
-
-.test-header {
-    display: flex;
-    align-items: center;
-    padding-left: 12px;
-    padding-right: 10px;
-}
-.text {
-    line-height: 2;
-    width: 13.35rem;
-    font-size: 16px !important;
-    align-items: flex-start;
-    display: flex;
-    padding-left: 5px;
 }
 
 .active-left-test{
@@ -42,10 +38,23 @@
     margin-right: 2px !important;
 }
 
-.show-results{
+.editor-navbar .Polaris-Navigation__SecondaryNavigation .Polaris-Navigation__Item{
+    padding-left: unset !important;
+}
+.editor-navbar .Polaris-Navigation__SecondaryNavigation .Polaris-Navigation__ItemWrapper {
+    margin-left: 2.2vw;
+    max-width: 17vw;
+} 
+
+.editor-header {
     display: flex;
+    justify-content: space-between;
+    min-height: 54px;
+    padding: 0 16px;
     align-items: center;
-    padding: 0 20px;
-    background: #fafbfb;
-    height: 5vh;
+    border-right: 1px solid #E1E3E5;
+}
+
+.editor-header .Polaris-Text--root{
+    max-width: 30vw;
 }
