add api changes and fix some ui

--- a/apps/dashboard/web/src/apps/dashboard/components/layouts/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/layouts/style.css
@@ -4,8 +4,14 @@
     right: -40vw;
     transition: right 0.3s ease-in-out;
     width:40vw;
-    height: 100%;
     z-index: 400;
+    height: 100vh;
+}
+
+.innerFlyLayout{
+    height: 100vh;
+    position: fixed;
+    overflow-y: scroll;
 }
 
 .show{
