fix loading and dynamic tooltip

--- a/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
@@ -23,3 +23,9 @@
 .active {
     background: #47466a !important;
 }
+
+.tooltipSpan {
+    overflow-x:hidden; 
+    text-overflow: ellipsis; 
+    white-space: nowrap;
+}
