--- a/apps/dashboard/web/src/apps/dashboard/components/tables/rows/row.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/tables/rows/row.css
@@ -5,3 +5,12 @@
 .linkClass > .Polaris-Link:focus:not(:active){
     outline: none !important;
 }
+
+.row-heading :hover{
+    text-decoration: underline !important;
+}
+
+.Polaris-IndexTable__TableCell--first{
+    padding-top: 12px !important;
+    vertical-align: top !important;
+}
