--- a/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/src/apps/dashboard/components/shared/style.css
@@ -1,3 +1,7 @@
+.editor .codicon.codicon-light-bulb.lightbulb-glyph{
+    display: none;
+}
+
 .highlight{
     background-color:#FFE9E8;
     color: #D72B0C !important;
