--- a/apps/dashboard/web/src/apps/dashboard/pages/onboarding/Onboarding.css
+++ b/apps/dashboard/web/src/apps/dashboard/pages/onboarding/Onboarding.css
@@ -9,35 +9,23 @@
 
 .main-card-onboarding {
     margin: auto;
-    width: 32vw;
-    margin-top: 4.5vw;
+    width: 38vw;
+    margin-top: 2vw;
     display: flex;
     flex-direction: column;
-    gap: 2vw;
-}
-
-.expand{
-    width: 42vw !important;
-}
-
-.change-margin{
-    margin-top: 1vw !important;
+    gap: 1.5vw;
 }
 
 .titleContainer {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 2vw;
-    padding-bottom: 0;}
+    gap: 8px;
+    padding-bottom: 0;
+}
 
 .suite-card{
     border-radius: 8px;
     cursor: pointer;
-}
-
-.active-card {
-    border: 2.5px solid #47466a !important;
 }
 
 .header-active{
