--- a/apps/dashboard/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
+++ b/apps/dashboard/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
@@ -7,3 +7,10 @@
     text-overflow: ellipsis; 
     white-space: nowrap
 }
+.gpt-button-fixed {
+    position: absolute;
+    z-index: 400;
+    right: 24px !important;
+    transition: right 0.3s ease-in-out;
+    top: 60px;
+}
