--- a/apps/dashboard/polaris_web/web/src/apps/dashboard/components/aktoGpt/style.css
+++ b/apps/dashboard/polaris_web/web/src/apps/dashboard/components/aktoGpt/style.css
@@ -1,57 +1,14 @@
 .message-container {
     flex: 4;
-    background: #353540;
+    background: #F6F6F7;
     height: 60vh;
     display: flex;
     flex-direction: column;
 }
 .left-nav-gpt {
     padding: 8px;
-    background-color: #202022;
-}
-
-.header-left-nav {
-    display: flex;
-    color: white;
-    gap: 8px;
-    border: 1px solid hsl(0deg 0% 100% / 20%);
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-}
-
-.nav-prompt {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    column-gap: 15px;
-    margin: 5px 0;
-    border-radius: 5px;
-}
-.nav-prompt:hover{
-    cursor: pointer;
-    background-color: hsla(240, 9%, 59%, 0.1);
-}
-
-.prompt-label {
-    color: white;
-    font-size: 14px !important;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 10vw !important;
-}
-
-.active-prompt{
-    background: #343551;
-}
-
-.left-nav-gpt .Polaris-Icon__Svg {
-    fill: white !important;
-}
-
-.chat-section{
-    flex: 6.5;
+    background-color:#F6F6F7;
+    border-right: 1px solid #C9CCCF;
 }
 
 .input-gpt{
@@ -61,8 +18,6 @@
 }
 
 .input-gpt .Polaris-TextField__Backdrop {
-    background: #41414e;
-    border: unset !important;
     border-radius: 8px !important;
 }
 
@@ -71,35 +26,6 @@
     font-size: 14px !important;
 }
 
-.input-gpt .Polaris-TextField__Input{
-    color: white !important;
-    font-size: 14px !important;
-}
-
-.prompt-section {
-    display: flex;
-    gap: 25px;
-    align-items: center;
-    color: #d1d5db;
-    font-size: 14px;
-    padding: 20px;
-    margin: auto;
-    max-width: 65vw;
-}
-
-.fixed-logo{
-    align-items: unset;
-}
-
-.intro-card .Polaris-Box {
-    background: #353540;
-    color: #d1d5db;
-    max-width: 85%;
-    margin: auto;
-    padding: 3vh 0;
-}
-
-.intro-card{
-    max-height: 52vh;
-    overflow: scroll;
+.response-message .Polaris-HorizontalStack {
+    align-items: flex-start !important;
 }
