testing bugs fixed

--- a/apps/dashboard/polaris_web/web/src/apps/dashboard/pages/dashboard.css
+++ b/apps/dashboard/polaris_web/web/src/apps/dashboard/pages/dashboard.css
@@ -47,6 +47,8 @@
     --p-color-text-primary: var(--akto-primary) !important;
     --p-color-text-success: var(--akto-primary) !important;
     --p-color-text-primary-hover: var(--akto-primary) !important;
+    
+    --p-color-icon-primary: var(--akto-primary) !important;
 }
 
 .Polaris-Page{
