custom language support added

--- a/apps/dashboard/polaris_web/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/polaris_web/web/src/apps/dashboard/components/shared/style.css
@@ -37,3 +37,7 @@
 .modified .line-numbers{
     display: none !important;
 }
+
+.editor .margin-view-overlays{
+    border-right: 1px solid #d3ded3;
+}
