fixed row style

--- a/apps/dashboard/polaris_web/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/polaris_web/web/src/apps/dashboard/components/shared/style.css
@@ -32,6 +32,7 @@
     overflow-x:hidden; 
     text-overflow: ellipsis; 
     white-space: nowrap;
+    max-width: 63vw;
 }
 
 .modified .line-numbers{
