fixes for matching designs

--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/components/layouts/leftnav/LeftNav.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/components/layouts/leftnav/LeftNav.css
@@ -1,4 +1,6 @@
-
+.Polaris-Navigation__ItemInnerWrapper{
+    border-top: none !important;
+}
 .Polaris-Navigation__PrimaryNavigation{
     justify-content: space-between;
 }
