--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
@@ -14,3 +14,7 @@
     transition: right 0.3s ease-in-out;
     top: 60px;
 }
+
+.control-row .Polaris-IndexTable__TableCell {
+    padding: 16px !important;
+}
