--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
@@ -19,3 +19,8 @@
     padding-top: 16px !important;
     padding-bottom: 16px !important;
 }
+
+.condensed-row .Polaris-IndexTable__TableCell {
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
+}
