First page iteration 1 completed

--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/components/shared/style.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/components/shared/style.css
@@ -100,3 +100,7 @@
 .editor .margin-view-overlays{
     border-right: 1px solid #d3ded3;
 }
+
+.pie-chart .highcharts-button{
+    display: none !important;
+}
