filters completed , css part left

--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/testing/SingleTestRunPage/style.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/testing/SingleTestRunPage/style.css
@@ -1,3 +1,8 @@
 .filterClass .Polaris-Filters__FiltersWrapper {
     border-bottom:0
 }
+
+.custom-row{
+    display: flex;
+    flex-direction: column;
+}
