--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/test_editor/TestEditor.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/test_editor/TestEditor.css
@@ -61,7 +61,7 @@
 }
 
 .req-resp-tabs .Polaris-LegacyTabs__Title{
-    padding: 0 !important;
+    padding: 8px 0 !important;
 } 
 
 .req-resp-tabs .Polaris-Box{
