Burp fixed as of Old ui

--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/quick_start/QuickStart.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/quick_start/QuickStart.css
@@ -70,3 +70,13 @@
 .update-connections .Polaris-Page--divider{
     padding-top: 20px !important;
 }
+
+.overflow-text{
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    white-space: nowrap;
+}
+
+.right-card .Polaris-Scrollable{
+    overflow-x: hidden;
+}
