revamp table UI

--- a/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
+++ b/apps/dashboard/web/polaris_web/web/src/apps/dashboard/pages/observe/api_collections/api_inventory.css
@@ -1,7 +1,3 @@
-.apiEndpointsTable .rowIconClass  .Polaris-Icon {
-    width: 4rem !important;
-}
-
 .styled-endpoint {
     overflow-x:hidden; 
     text-overflow: ellipsis; 
@@ -18,4 +14,9 @@
 .control-row .Polaris-IndexTable__TableCell {
     padding-top: 16px !important;
     padding-bottom: 16px !important;
+}
+
+.condensed-row .Polaris-IndexTable__TableCell {
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
 }
